Add JDK 23 "unseen work" example: the secondary_super_cache scalability fix
JDK-8180450 ("secondary_super_cache does not scale well") -- a 20-year-old
HotSpot design flaw fixed with no JEP. Richer than a typical micro-opt
ticket: it's a real scalability cliff (cache-line ping-ponging under
thread contention on instanceof/checkcast against interfaces) that hit
production frameworks directly -- Netty (its own GitHub issue),
Vert.x, Mutiny, Hibernate, Quarkus. Verified: Fix Version 23, no JEP.

Numbers (~228x InterContention, ~347x IntraContention) sourced from a
later platform-port PR's JMH output reusing the same benchmark, since
the original JDK 23 PR itself only gives qualitative notes. Honestly
caveated: general-purpose benchmarks showed no broad change -- this
fixes a scalability cliff under contention, not a universal speedup.
Companion platform-port tickets (C1/interpreter, PPC64/s390x/RISC-V)
all landed in JDK 24, tying back to the JDK 24 examples already in
the deck.

Added as two new slides in slides.md (respecting the user's own manual
edits to the file since my last pass -- trimmed Comfort Zone Trap
bullets, un-hidden Build Tool Clue / Who Has Your Back sections, other
wording tweaks -- none of that was touched) and as a new callout in
README.md's Section 5 intro.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JZ8Cv8bTbNhjthwfc1H39D